<resources>
    <string name="app_name">Third Homework</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_music">Music</string>
    <string name="menu_map">Map</string>
    <string name="menu_mainscreen">Main Screen</string>

    <string name="btn_mainscreen">Get to main screen</string>

    <string name="btn_backtolist">Get to songs list</string>
</resources>