<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/musicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_music"
        android:title="@string/menu_music"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"/>
    <item
        android:id="@+id/settingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/friendsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_friends"
        android:title="@string/menu_friends"/>
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"/>

</menu>